# digimend-userspace-drivers

./: .gitignore  Makefile.am  README.md  configure.ac  digimend-userspace-drivers.spec  notes.txt
.github/workflows/: main.yml
debian/: .gitignore  changelog  control  copyright  rules
include/: Makefile.am
lib/: Makefile.am
src/: .gitignore  Makefile.am  digimend-translated.c
